# DockerSample

./: CMakeLists.txt  Dockerfile  conanfile.txt
devtools/: docker_build.bat  docker_run.bat  win64_vs2019.bat
src/: AppComponent.h  main.cpp
src/controller/: SearchController.cpp  SearchController.h
src/dto/: SearchResult.cpp  SearchResult.h
